[package]
name = "deserialize_file_examples"
version = "0.1.0"
authors = ["pbootly <mthomas@polybit.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.0"
serde_yaml = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }